# Hartonomous

./: .bandit  .env.dev  .env.example  .env.localhost  .env.production  .env.staging  .gitattributes  .gitignore  .gitmodules  .order  .pylintrc  .yamllint  1  ACTION-CHECKLIST.md  ACTUAL_TRUTH_REPORT.md  ADVANCED_ARCHITECTURE.md  AGENT_INTEGRATION_SPECIFICATION.md  AI_PARADIGM.md  AI_REVOLUTION.md  ARCHITECTURE.md  ARCHITECTURE_VALIDATION.md  AUDIT_REPORT.md  Atomic Spatial AI Architecture Blueprint.md  BPE_AUTONOMOUS_LEARNING_COMPLETE.md  BUILD_GUIDE.md  CICD-QUICKSTART.md  CI_CD_SETUP.md  CLAUDE.md  CLAUDE_CLI_HANDOFF.md  CLAUDE_CONTINUATION_PROMPT.md  CMAKE_AUDIT.md  CMakeLists.txt  CMakePresets.json  COGNITIVE_ARCHITECTURE.md  COGNITIVE_TOPOLOGY_OPTIMIZATION.md  COMMANDS.md  COMMIT_READY.md  COMPRESSION_ANALYSIS.md  CORRECTED_PARADIGM.md  CORTEX_IMPLEMENTATION_SPECIFICATION.md  (+174 more)
.azuredevops/: GITHUB-SETUP.md  (+1 more)
Engine/: CMakeLists.txt  README.md
Engine/cmake/: Dependencies.cmake  SourceLists.cmake
Engine/include/: export.hpp  interop_api.h
Engine/include/cognitive/: astar_search.hpp  godel_engine.hpp  ooda_loop.hpp  reasoning_engine.hpp  voronoi_analysis.hpp  walk_engine.hpp
Engine/include/database/: bulk_copy.hpp  postgres_connection.hpp
Engine/include/geometry/: hopf_fibration.hpp  s3_bbox.hpp  s3_centroid.hpp  s3_distance.hpp  s3_vec.hpp  super_fibonacci.hpp
Engine/include/hashing/: blake3_pipeline.hpp
Engine/include/ingestion/: async_flusher.hpp  model_ingester.hpp  model_package_loader.hpp  ngram_extractor.hpp  safetensor_ingester.hpp  safetensor_loader.hpp  sequitur.hpp  substrate_batch.hpp  substrate_cache.hpp  substrate_service.hpp  text_ingester.hpp  universal_ingester.hpp
Engine/include/ml/: embedding_projection.hpp  model_extraction.hpp  s3_hnsw.hpp
Engine/include/query/: ai_ops.hpp  semantic_query.hpp
Engine/include/spatial/: hilbert_curve_4d.hpp
Engine/include/storage/: atom_lookup.hpp  atom_store.hpp  composition_store.hpp  content_store.hpp  format_utils.hpp  physicality_store.hpp  relation_evidence_store.hpp  relation_store.hpp  substrate_store.hpp
Engine/include/unicode/: codepoint_projection.hpp  semantic_assignment.hpp
Engine/include/utils/: logger.hpp  time.hpp  unicode.hpp
Engine/src/: interop_api.cpp
Engine/src/cognitive/: astar_search.cpp  godel_engine.cpp  ooda_loop.cpp  reasoning_engine.cpp  voronoi_analysis.cpp  walk_engine.cpp
Engine/src/database/: bulk_copy.cpp  postgres_connection.cpp
Engine/src/geometry/: s3_bbox.cpp  s3_centroid.cpp  s3_distance.cpp  super_fibonacci.cpp
Engine/src/hashing/: blake3_pipeline.cpp
Engine/src/ingestion/: model_ingester.cpp  model_package_loader.cpp  ngram_extractor.cpp  safetensor_ingester.cpp  safetensor_loader.cpp  text_ingester.cpp
Engine/src/ml/: model_extraction.cpp  s3_hnsw.cpp
Engine/src/query/: ai_ops.cpp  semantic_query.cpp
Engine/src/storage/: atom_lookup.cpp  atom_store.cpp  composition_store.cpp  content_store.cpp  physicality_store.cpp  relation_evidence_store.cpp  relation_store.cpp
Engine/tests/: CMakeLists.txt  example_unicode_projection.cpp  test_codepoint_projection.cpp  test_hilbert_curve_4d.cpp  test_hopf_fibration.cpp  test_super_fibonacci.cpp
Engine/tests/e2e/: test_end_to_end_pipeline.cpp
Engine/tools/: CMakeLists.txt  ingest_model.cpp  ingest_tatoeba.cpp  ingest_text.cpp  ingest_ud.cpp  ingest_wiktionary_xml.cpp  ingest_wordnet_omw.cpp  seed_unicode.cpp  walk_test.cpp
Hartonomous.Native/: CMakeLists.txt  CMakePresets.json  Hartonomous.Native.csproj  Hartonomous.Native.nuspec  Hartonomous.Native.props  Hartonomous.Native.targets  README.md  build.ps1  build.sh  test_import.safetensors  vcpkg.json
Hartonomous.Native/include/: skilling.h
Hartonomous.Native/scripts/: full_setup_and_test.ps1
Hartonomous.Native/sql/: schema.sql
Hartonomous.Native/src/: cli_native.cpp  hartonomous_native.cpp  namespaces.hpp  test_native.cpp
Hartonomous.Native/tests/: bench_moby.cpp  test_bulk_store.cpp  test_connection_pool.cpp  test_cpe_debug.cpp  test_database.cpp  test_encoding.cpp  test_fixture.hpp  test_invariants.cpp  test_main.cpp  test_mlops.cpp  test_mlops_proof.cpp  test_mlops_queries.cpp  test_moby_dick.cpp  test_query.cpp  test_safetensor.cpp  test_semantic_linker.cpp  test_spatial.cpp  test_vision.cpp
PostgresExtension/: CMakeLists.txt  README.md  hartonomous--0.1.0.sql  hartonomous.control
PostgresExtension/hartonomous/: CMakeLists.txt  Makefile  hartonomous.control
PostgresExtension/include/: hartonomous_functions.hpp  pg_wrapper.hpp
PostgresExtension/s3/: CMakeLists.txt  Makefile  Makefile.pgxs.deprecated  s3.control
PostgresExtension/schema/: hartonomous_schema.sql  postgis_spatial_functions.sql  relations_schema.sql  security_model.sql  semantic_query_engine.sql
PostgresExtension/sql/: hartonomous--0.1.0.sql
PostgresExtension/src/: hartonomous_functions.cpp  main.cpp  pg_wrapper.cpp
UCDIngestor/: CMakeLists.txt  Config.hpp  IDataModel.hpp  IDatabaseConnection.hpp  IFileReader.hpp  PgConnection.cpp  PgConnection.hpp  UcdFileReader.cpp  UcdFileReader.hpp  UcdIngestor.cpp  UcdIngestor.hpp  UcdModels.hpp  main.cpp  setup_db.sh  ucd_gene_pool.sql  ucd_ingestor  ucd_schema.sql
UCDIngestor/db_scripts/: cleanup_db.sql  create_tables.sql  novel_schema.sql  setup_db.sql  ucd_schema.sql
UCDIngestor/include/: Config.hpp  IDataModel.hpp  IDatabaseConnection.hpp  IUcdSource.hpp  PgConnection.hpp  UcdFileReader.hpp  UcdIngestor.hpp  UcdModels.hpp  UcdXmlReader.hpp
UCDIngestor/sql/: 01-ucd-schema.sql
UCDIngestor/src/: PgConnection.cpp  UcdFileReader.cpp  UcdIngestor.cpp  UcdXmlReader.cpp  main.cpp  ucd_ingest.cpp
cortex/: CMakeLists.txt  Makefile  cortex--1.0.sql  cortex.c  cortex.control  install_cortex.ps1  install_extension.ps1  lmds.c  lmds_projector.cpp  lmds_projector.h
shader/: Cargo.toml
shader/benches/: sdi_generation.rs
shader/src/: binary_copy.rs  copy_loader.rs  cpe_builder.rs  error.rs  geometry_wkb.rs  hilbert_indexer.rs  lib.rs  main.rs  main_production.rs  quantizer.rs  quantizer_simd.rs  rle_encoder.rs  sdi.rs
(+2442 files in other folders)
